<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LinePoster</string>
    <string name="action_settings">Settings</string>
    
    <string name="title">LinePoster Sample</string>
    <string name="post_button">Post</string>
    <string name="post_text_hint">post message</string>
    <string name="post_local_image">Post local image</string>
    <string name="post_assets_image">Post assets image</string>

</resources>